# NSQCuE

./: .electron-builder.config.js  .gitignore  .zshistory  electron client.txt  enT.sh  global-mouse-hook.win32-x64-msvc.node  index.js  output.txt  output1.txt  output3.txt  output4.txt  output7.txt  package-lock.json  package.json  package.json1  test-native.js  updateConfigs.sh  Текстовый файл.txt  тест в игре.txt
.github/workflows/: build-win.yml  build-win.yml1
111/: enT.sh  oldClient.txt
111/global-mouse-hook/: .gitattributes  index.js
111/global-mouse-hook/src/: lib.rs
111/main/: preload.js
111/renderer/: renderer.js  style.css
222/: enT.sh  output.txt
222/.github/workflows/: build.yml
222/js/: mediasoupClient.js
222/main/: main.js  preload.js
222/renderer/: index.html  renderer.js  style.css
baseSounds/: .gitkeep
global-mouse-hook/: .gitignore  Cargo.toml  electron-hook.js  index.js  log.txt  package-lock.json  package.json  test-codes.js  test-debug-detailed.js  test-debug.js  test-detailed.js  test-platform.js  test.js  test.mjs
global-mouse-hook/.github/workflows/: CI.yml  build.yml  ci.yml
global-mouse-hook/src/: lib.rs  tmps5d28x
main/: addonManager.js  main.1  main.js  main.txt  preload.js  settings.js  soundsManager.js  utils.js
renderer/: client.js  index.html  overlay.html  overlay.html1  renderer.js  renderer.js1  renderer.js2  style.css  voice-chat-local.html  voice-chat.css  voice-chat.html  voice-chat.js
renderer/voice/: .zshistory  app.js  client.txt  index.html  mediasoup-client.min.js  styles.css
renderer/voice/modules/: .zshistory  MediaManager.js  MembersManager.js  TextChatManager.js  UIManager.js  VoiceChatClient.js  VolumeBoostManager.js  client.txt  logs.txt
