[package]
name = "global_mouse_hook"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[dependencies]
napi = "2.0"
napi-derive = "2.0"
lazy_static = "1.4.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging", 
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
] }

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12.0"

[build-dependencies]
napi-build = "1.0"